.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

6.34.0  2016-04-26

New Features:

  * util-core: Add `Throwables.unchecked` to help Java users deal with checked
    exceptions. ``RB_ID=811441``

  * util-stats: Can now get from a `com.twitter.finagle.stats.StatsReceiver`` to all "leaf"
    StatsReceivers that don't delegate to another StatsReceiver with
    `com.twitter.finagle.stats.DelegatingStatsReceiver.all`.  ``RB_ID=819519``

API Changes:

  * util-core: Removed deprecated methods from Buf.scala ``RB_ID=809948``
    - Removed `c.t.io.Buf.ByteArray.apply`, replace usage with `Buf.ByteArray.Owned.apply`.
    - Removed `c.t.io.Buf.ByteArray.unapply`, replace usage with `Buf.ByteArray.Owned.unapply`.
    - Removed `c.t.io.Buf.ByteBuffer.apply`, replace usage with `Buf.ByteBuffer.Owned.apply`.
    - Removed `c.t.io.Buf.toByteBuffer`, replace usage with `Buf.ByteBuffer.Owned.extract`.

  * util-core: Removed deprecated `Future.apply` methods ``RB_ID=811617``

  * util-stats: Removed `com.twitter.finagle.stats.BroadcastStatsReceiver` marker trait in favor of
    `com.twiter.finagle.stats.DelegatingStatsReceiver` marker trait, which lets us specify that we
    only delegate to a single `com.twitter.finagle.stats.StatsReceiver`.  ``RB_ID=819519``

  * util-zk-common: Removed `com.twitter.zk.ServerSet`. Use implementations of ServerSets in the
    finagle-serversets project. ``RB_ID=821355``

Bug Fixes:

  * util-core: Fix memory leak in `Var.apply(T, Event[T])` and `Var.patch`.
    ``RB_ID=809100``

6.33.0  2016-03-10

New Features:

  * util-core: AsyncSemaphore supports closing and draining of waiters via `fail`. ``RB_ID=807590``

  * util-core: Add convenience methods `force`, `size`, `sum`, and `withEffect` to `AsyncStream`.
    ``RB_ID=808411``
